# logetl-app

./: Gemfile  docker-compose.yml  package.json
app/controllers/: sessions_controller.rb
app/javascript/: application.js
app/models/: account.rb  logfile.rb  member.rb  query.rb  trigger.rb  user.rb
app/resources/: member_resource.rb
app/services/: jwt_generator.rb  regex_extractor_generator.rb  regex_selector_generator.rb  token_generator.rb
backend/: .rubocop.yml  Dockerfile  Gemfile  tsconfig.json
backend/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb  storage.yml
backend/db/: schema.rb  seeds.rb
binary/go/: main
binary/rust/: .env  Cargo.toml
binary/rust/src/: main.rs
binary/rust/src/lib/: process_spawner.rs
config/: application.rb  routes.rb
config/environments/: development.rb  production.rb
config/initializers/: cors.rb  json_api.rb  react_server_rendering.rb  system.rb
data/fake_logs/: node.js.txt  php_laravel.txt  python_django.txt
db/: schema.rb  seeds.rb
db/migrate/: 20230405192906_create_extensions.rb  20230405193127_create_users.rb  20230405193947_create_accounts.rb  20230405194009_create_members.rb  20230405194142_rolify_create_roles.rb  20230405224321_create_queries.rb  20230405224322_create_triggers.rb  20230405224700_create_transformations.rb  20230406200347_create_logfiles.rb
frontend/: Brewfile  Dockerfile  package-lock.json  package.json
lib/tasks/: ai.rake
proxy/: Dockerfile  nginx.conf
spec/: rails_helper.rb
spec/factories/: accounts_factory.rb  members_factory.rb  (+1 more)
(+99 files in other folders)
