[package]
name = "binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = "1.0.160"
serde_derive = "1.0.160"
